--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -7,7 +7,7 @@
   height: 100%;
   font-family: "Patrick Hand", cursive;
   color: whitesmoke;
-  overflow: hidden;
+  x-overflow: hidden;
 }
 
 body {
@@ -23,8 +23,8 @@ header {
   text-align: center;
   background-color: green;
   width: 100%;
-  height: 25%;
-  padding-top: 2%;
+  height: auto;
+  padding: 2%;
 }
 
 main {
@@ -38,11 +38,11 @@ main {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 4em;
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.5em;
   width: 60%;
 }
 
@@ -55,10 +55,12 @@ section {
   width: 80%;
   height: 80%;
   box-shadow: 10px 10px 42px 0 rgba(0, 0, 0, 0.75);
-  contain: content;
+  background-color: beige;
+  border-radius: 50px;
+  padding: 1%;
 }
 
-.title {
+.top {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -83,7 +85,7 @@ button {
   border-radius: 10%;
   margin: 2%;
   color: black;
-  font-size: 1rem;
+  font-size: 1em;
   background-color: whitesmoke;
 }
 button:hover {
@@ -96,50 +98,98 @@ button:hover {
   height: 50%;
 }
 
-#gagBtn {
-  height: 50%;
-}
-
 #questions {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-size: 3rem;
-  background-color: tan;
-  color: whitesmoke;
+  font-size: 2em;
+  background-color: whitesmoke;
+  color: black;
   margin: 5%;
   padding: 5%;
+
+  border: 2px gray solid;
+  border-radius: 10px;
 }
 
-#time {
+#timeBox {
   background-color: whitesmoke;
   color: black;
   border: 2px black solid;
   border-radius: 10%;
   width: 20%;
-  height: 40%;
+  height: auto;
   margin: 1%;
+  padding: 1%;
 }
 
 #timer {
+  margin: 1%;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   color: red;
-  font-size: 3rem;
+  font-size: 2em;
 }
 
 #answers {
   width: 80%;
   border: 2px black solid;
   margin: 1%;
-  background-image: repeating-linear-gradient(0deg, rgba(228, 58, 131, 0.5) 0px, rgba(228, 58, 131, 0.5) 28px, transparent 28px, transparent 63px, rgba(228, 188, 58, 0.5) 63px, rgba(228, 188, 58, 0.5) 82px, transparent 82px, transparent 127px, rgba(63, 228, 58, 0.5) 127px, rgba(63, 228, 58, 0.5) 144px, transparent 144px, transparent 152px, rgba(58, 200, 228, 0.5) 152px, rgba(58, 200, 228, 0.5) 175px, transparent 175px, transparent 195px, rgba(120, 58, 228, 0.5) 195px, rgba(120, 58, 228, 0.5) 214px, transparent 214px, transparent 222px), repeating-linear-gradient(90deg, rgba(228, 58, 131, 0.5) 0px, rgba(228, 58, 131, 0.5) 45px, transparent 45px, transparent 66px, rgba(228, 188, 58, 0.5) 66px, rgba(228, 188, 58, 0.5) 93px, transparent 93px, transparent 121px, rgba(63, 228, 58, 0.5) 121px, rgba(63, 228, 58, 0.5) 158px, transparent 158px, transparent 207px, rgba(58, 200, 228, 0.5) 207px, rgba(58, 200, 228, 0.5) 214px, transparent 214px, transparent 243px, rgba(120, 58, 228, 0.5) 243px, rgba(120, 58, 228, 0.5) 285px, transparent 285px, transparent 331px), linear-gradient(90deg, white, white);
+  padding: 1%;
+  background-image: repeating-linear-gradient(
+      0deg,
+      rgba(228, 58, 131, 0.5) 0px,
+      rgba(228, 58, 131, 0.5) 28px,
+      transparent 28px,
+      transparent 63px,
+      rgba(228, 188, 58, 0.5) 63px,
+      rgba(228, 188, 58, 0.5) 82px,
+      transparent 82px,
+      transparent 127px,
+      rgba(63, 228, 58, 0.5) 127px,
+      rgba(63, 228, 58, 0.5) 144px,
+      transparent 144px,
+      transparent 152px,
+      rgba(58, 200, 228, 0.5) 152px,
+      rgba(58, 200, 228, 0.5) 175px,
+      transparent 175px,
+      transparent 195px,
+      rgba(120, 58, 228, 0.5) 195px,
+      rgba(120, 58, 228, 0.5) 214px,
+      transparent 214px,
+      transparent 222px
+    ),
+    repeating-linear-gradient(
+      90deg,
+      rgba(228, 58, 131, 0.5) 0px,
+      rgba(228, 58, 131, 0.5) 45px,
+      transparent 45px,
+      transparent 66px,
+      rgba(228, 188, 58, 0.5) 66px,
+      rgba(228, 188, 58, 0.5) 93px,
+      transparent 93px,
+      transparent 121px,
+      rgba(63, 228, 58, 0.5) 121px,
+      rgba(63, 228, 58, 0.5) 158px,
+      transparent 158px,
+      transparent 207px,
+      rgba(58, 200, 228, 0.5) 207px,
+      rgba(58, 200, 228, 0.5) 214px,
+      transparent 214px,
+      transparent 243px,
+      rgba(120, 58, 228, 0.5) 243px,
+      rgba(120, 58, 228, 0.5) 285px,
+      transparent 285px,
+      transparent 331px
+    ),
+    linear-gradient(90deg, white, white);
 }
 
 ul {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  margin: 1%;
+
   list-style-type: none;
   justify-content: center;
   align-content: center;
@@ -151,7 +201,7 @@ li {
   text-align: center;
   font-family: "IBM Plex Mono", monospace;
   border: 2px solid green;
-  margin: 0%;
+
   border-radius: 20px;
   margin-left: 20%;
   padding: 2%;
@@ -161,7 +211,7 @@ li {
 }
 li:hover {
   background-color: aqua;
-  animation: ease 1s;
+  transition: ease 1s;
 }
 
 footer {
@@ -170,8 +220,8 @@ footer {
   text-align: center;
   background-color: green;
   width: 100%;
-  height: 10%;
-  font-size: 2rem;
+  height: auto;
+  font-size: 1em;
   font-weight: 200;
   font-family: "Bebas Neue", cursive;
 }
@@ -179,4 +229,23 @@ footer {
 span {
   font-weight: 400;
   color: tan;
-}/*# sourceMappingURL=main.css.map */
+}
+
+@media only screen and (max-width: 800px) {
+  header {
+    display: none;
+  }
+  section {
+    height: auto;
+  }
+
+  main {
+    height: 90%;
+  }
+  footer {
+    font-size: 1em;
+  }
+  li {
+    font-size: 0.6em;
+  }
+}
