--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -7,14 +7,18 @@
   height: 100%;
   font-family: "Patrick Hand", cursive;
   color: whitesmoke;
-  x-overflow: hidden;
 }
 
 body {
   background-color: green;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-header {
+#header {
   display: flex;
   flex-direction: column;
   flex-wrap: none;
@@ -58,6 +62,7 @@ section {
   background-color: beige;
   border-radius: 50px;
   padding: 1%;
+  z-index: 1;
 }
 
 .top {
@@ -230,18 +235,51 @@ span {
   font-weight: 400;
   color: tan;
 }
+#richmond {
+  position: relative;
+  height: 200px;
+  width: 150px;
+  top: 200px;
+  left: -30%;
+}
+#photo {
+  position: absolute;
+  height: 150px;
+  width: 150px;
+  z-index: 1;
+}
+.rtext {
+  position: absolute;
+  top: 30px;
+  left: 150px;
+}
+#roy {
+  position: absolute;
+  height: 150px;
+  width: auto;
+  top: 200px;
+  left: 80%;
+}
+#jen {
+  position: absolute;
+  height: 150px;
+  width: auto;
+  top: 20%;
+  left: 40%;
+}
+#maurice {
+  position: absolute;
+  height: 150px;
+  width: auto;
+  top: 150px;
+  left: 50%;
+}
 
 @media only screen and (max-width: 800px) {
-  header {
+  #header {
     display: none;
   }
-  section {
-    height: auto;
-  }
 
-  main {
-    height: 90%;
-  }
   footer {
     font-size: 1em;
   }
