--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -37,6 +37,7 @@ section {
   background-color: beige;
   border-radius: 50px;
   padding: 1%;
+  box-shadow: inset -9px -6px 50px rgb(85, 85, 80);
 }
 
 .top {
@@ -50,9 +51,8 @@ section {
   padding: 50px;
 }
 .bottom {
-  position: absolute;
-  bottom: 50px;
-  left: 35%;
+  display: flex;
+  justify-content: center;
 }
 
 #startBtn {
@@ -76,6 +76,7 @@ section {
   border: 2px gray solid;
   border-radius: 10px;
   background-color: whitesmoke;
+  box-shadow: inset 2px 1px 5px black;
 }
 #questions {
   font-size: 2em;
@@ -98,7 +99,7 @@ section {
 
 #timeBox {
   background-color: whitesmoke;
-
+  box-shadow: inset 1px 1px 5px black;
   top: 50px;
   right: 50px;
   border: 2px black solid;
@@ -128,12 +129,11 @@ ul {
 
 button {
   display: flex;
-  align-self: center;
-  text-align: center;
 
   border: 2px black solid;
 
   border-radius: 10px;
+  box-shadow: 2px 1px 3px black;
 
   padding: 10px;
   width: 10vw;
@@ -182,30 +182,46 @@ span {
   footer {
     display: none;
   }
+  button {
+    display: flex;
+
+    border: 2px black solid;
+
+    border-radius: 10px;
+    box-shadow: 2px 1px 3px black;
+
+    padding: 10px;
+    width: 20vw;
+    color: black;
+    font-size: 1em;
+    background-color: whitesmoke;
+  }
 }
 @media only screen and (max-width: 800px) {
   header {
     display: none;
   }
   .top {
-    position: relative;
-    bottom: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    padding: 50px;
   }
+  .bottom {
+    position: relative;
+    top: -80px;
+    display: flex;
+    justify-content: center;
+  }
+
   #startBtn {
-    display: block;
     position: absolute;
     bottom: 60px;
-    left: -30px;
+    left: 90px;
     border: 2px black solid;
     border-radius: 10%;
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
 
     padding: 10px;
     color: black;
@@ -221,6 +237,7 @@ span {
     border-radius: 10px;
     background-color: whitesmoke;
   }
+
   #questions {
     display: flex;
     flex-wrap: wrap;
@@ -230,6 +247,7 @@ span {
 
     padding: 20px;
   }
+
   #timeBox {
     background-color: whitesmoke;
     display: block;
@@ -240,7 +258,7 @@ span {
     border-radius: 10px;
     width: 100px;
     height: auto;
-    margin: 50px;
+
     padding: 1%;
   }
   #timer {
@@ -248,7 +266,7 @@ span {
   }
   ul {
     display: grid;
-    bottom: -10px;
+
     grid-template-columns: repeat(2, 1fr);
 
     list-style-type: none;
@@ -259,5 +277,79 @@ span {
 
   footer {
     display: none;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .bottom {
+    position: relative;
+    top: -50px;
+    display: flex;
+    justify-content: center;
+  }
+  button {
+    display: flex;
+
+    border: 2px black solid;
+
+    border-radius: 10px;
+    box-shadow: 2px 1px 3px black;
+
+    padding: 10px;
+    width: 30vw;
+    color: black;
+    font-size: 1em;
+    background-color: whitesmoke;
+  }
+  #startBtn {
+    display: block;
+    position: absolute;
+    bottom: 30px;
+    left: -30px;
+    border: 2px black solid;
+    border-radius: 10%;
+    width: 100px;
+    height: 100px;
+
+    padding: 10px;
+    color: black;
+    font-size: 1em;
+    background-color: whitesmoke;
+  }
+}
+@media only screen and (max-width: 380px) {
+  .bottom {
+    position: relative;
+    top: -130px;
+    display: flex;
+    justify-content: center;
+  }
+  button {
+    display: flex;
+
+    border: 2px black solid;
+
+    border-radius: 10px;
+    box-shadow: 2px 1px 3px black;
+    margin: 10px;
+    padding: 10px;
+    width: 20vw;
+    color: black;
+    font-size: 1em;
+    background-color: whitesmoke;
+  }
+  #startBtn {
+    display: block;
+    position: absolute;
+    bottom: 60px;
+    left: -30px;
+    border: 2px black solid;
+    border-radius: 10%;
+    width: 70px;
+    height: 70px;
+
+    padding: 10px;
+    color: black;
+    font-size: 1em;
+    background-color: whitesmoke;
   }
 }
