--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,113 +1,95 @@
+:root {
+  --screen-bg-color: whitesmoke;
+  --button-color: #fffcf6;
+  --device-color: beige;
+  --button-text-color: black;
+  --body-bg-color: rgb(36, 37, 36);
+  --screen-text-color: rgb(162, 201, 157);
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  color: rgb(162, 201, 157);
+  color: var(--screen-text-color);
   font-family: "Source Code Pro", monospace;
 }
 
 body {
-  background-color: rgb(36, 37, 36);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: var(--body-bg-color);
   text-align: center;
 }
 
-header {
-  height: 50px;
-}
-
-h1 {
-  font-size: 4em;
-}
-
-h3 {
-  font-size: 1.5em;
-  width: 60%;
-}
-
-section {
-  position: relative;
-
+main {
+  display: grid;
+  margin-top: 2rem;
+  grid-template-columns: 20% 60% 20%;
+  grid-template-rows: 10% 80% 10%;
+  justify-content: center;
+  justify-items: center;
   width: 80vw;
-  height: 80vh;
-
-  background-color: beige;
+  background-color: var(--device-color);
   border-radius: 50px;
-  padding: 1%;
+  padding: 2em;
   box-shadow: inset -9px -6px 50px rgb(85, 85, 80);
 }
 
-.top {
-  position: relative;
-  bottom: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-
-  padding: 50px;
-}
-.bottom {
-  display: flex;
-  justify-content: center;
-}
-
 #startBtn {
-  display: block;
-
-  border: 2px black solid;
-  border-radius: 10%;
-  width: 100px;
-  height: 100px;
-  margin: 50px;
-  padding: 10px;
-  color: black;
+  grid-area: 2 / 1;
+  border: 2px gray solid;
+  border-radius: 0.5em;
+  box-shadow: 2px 1px 3px black;
+  width: 4rem;
+  margin: auto;
+  padding: 0.5em;
+  color: var(--button-text-color);
   font-size: 1em;
-  background-color: whitesmoke;
+  background-color: var(--button-color);
 }
 .display {
+  grid-area: 2 /2;
   display: flex;
-  position: relative;
-  width: 60%;
-  height: 400px;
+  flex-direction: column;
+  width: 100%;
+  height: 80vh;
   border: 2px gray solid;
   border-radius: 10px;
-  background-color: whitesmoke;
+  background-color: var(--screen-bg-color);
   box-shadow: inset 2px 1px 5px black;
+  padding: 1em;
+  contain: content;
 }
+
 #questions {
-  font-size: 2em;
-
-  width: 90%;
-
-  left: 20%;
-  padding: 20px;
+  font-size: 2rem;
+  text-align: center;
 }
+
 .options {
-  position: absolute;
-  display: grid;
+  font-size: 1rem;
   text-align: start;
-
-  bottom: 20px;
-  left: 10px;
-  grid-template-columns: repeat(1, 1fr);
-  row-gap: 40px;
+  list-style: none;
 }
-
+li {
+  margin: 4em 2em;
+}
+li:hover {
+  background-color: aqua;
+  transition: ease 1s;
+}
 #timeBox {
-  background-color: whitesmoke;
+  grid-area: 2/3;
+  background-color: var(--screen-bg-color);
   box-shadow: inset 1px 1px 5px black;
-  top: 50px;
-  right: 50px;
-  border: 2px black solid;
+  border: 2px gray solid;
   border-radius: 10px;
-  width: 100px;
-  height: auto;
-  margin: 50px;
-  padding: 1%;
+  justify-content: center;
+  margin: auto;
+  padding: 0.8em;
 }
 
 #timer {
@@ -116,240 +98,77 @@ section {
   font-size: 2em;
 }
 
-ul {
+.answerBtn {
+  grid-area: 3/2;
+  margin: 1em;
+  justify-content: center;
   display: grid;
-  bottom: 20px;
-  grid-template-columns: repeat(2, 1fr);
-
-  list-style-type: none;
-
-  row-gap: 40px;
-  column-gap: 40px;
+  grid-template: 1fr / 1fr 1fr 1fr 1fr;
+  gap: 1em;
 }
 
-button {
-  display: flex;
-
-  border: 2px black solid;
-
+.keys {
+  border: 2px gray solid;
   border-radius: 10px;
   box-shadow: 2px 1px 3px black;
-
-  padding: 10px;
+  padding: 1em;
   width: 10vw;
   color: black;
   font-size: 1em;
-  background-color: whitesmoke;
-}
-li:hover {
-  background-color: aqua;
-  transition: ease 1s;
+  background-color: var(--button-color);
 }
 
 footer {
   display: block;
   align-items: center;
   text-align: center;
-  margin: 50px;
-  width: 100%;
-  height: auto;
-  font-size: 1em;
-  font-weight: 200;
+  margin: 1rem;
+  font-size: 1rem;
 }
 
 span {
   font-weight: 400;
   color: tan;
 }
-
-@media only screen and (max-width: 1030px) {
-  header {
-    display: none;
+@media (max-width: 1000px) {
+  li {
+    margin: 1em 0.5em;
   }
-  section {
-    width: 100vw;
-    height: 100vh;
-    border-radius: 0px;
-  }
-  .display {
-    position: relative;
-    width: 100%;
-    height: 500px;
-    border: 2px gray solid;
-    border-radius: 10px;
-    background-color: whitesmoke;
-  }
-  footer {
-    display: none;
-  }
-  button {
-    display: flex;
-
-    border: 2px black solid;
-
-    border-radius: 10px;
-    box-shadow: 2px 1px 3px black;
-
-    padding: 10px;
-    width: 20vw;
-    color: black;
-    font-size: 1em;
-    background-color: whitesmoke;
-  }
-}
-@media only screen and (max-width: 800px) {
-  header {
-    display: none;
-  }
-  .top {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .bottom {
-    position: relative;
-    top: -80px;
-    display: flex;
-    justify-content: center;
-  }
-
-  #startBtn {
-    position: absolute;
-    bottom: 60px;
-    left: 90px;
-    border: 2px black solid;
-    border-radius: 10%;
-    width: 100px;
-    height: 100px;
-
-    padding: 10px;
-    color: black;
-    font-size: 1em;
-    background-color: whitesmoke;
-  }
-  .display {
-    display: flex;
-    position: relative;
-    width: 80vw;
-    height: 400px;
-    border: 2px gray solid;
-    border-radius: 10px;
-    background-color: whitesmoke;
-  }
-
-  #questions {
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 1em;
-
-    width: 90%;
-
-    padding: 20px;
+  .answerBtn {
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 1fr;
+    margin: 1em;
   }
 
   #timeBox {
-    background-color: whitesmoke;
-    display: block;
-    position: relative;
-    top: -40px;
-    right: 0px;
-    border: 2px black solid;
-    border-radius: 10px;
-    width: 100px;
-    height: auto;
-
-    padding: 1%;
+    grid-area: 3/3;
   }
-  #timer {
-    font-size: 1em;
+  #startBtn {
+    grid-area: 3/1;
   }
-  ul {
-    display: grid;
-
-    grid-template-columns: repeat(2, 1fr);
-
-    list-style-type: none;
-
-    row-gap: 20px;
-    column-gap: 40px;
+}
+@media (max-width: 550px) {
+  main {
+    width: 100vw;
+    margin: 0;
+  }
+  .display {
+    grid-area: 2 / 1 / 2 / 4;
+  }
+  #questions {
+    font-size: 1.5rem;
+    text-align: center;
   }
 
+  .options {
+    font-size: 1rem;
+    text-align: start;
+    list-style: none;
+  }
+  .answerBtn {
+    margin: 0.5em;
+  }
   footer {
     display: none;
-  }
-}
-@media only screen and (max-width: 600px) {
-  .bottom {
-    position: relative;
-    top: -50px;
-    display: flex;
-    justify-content: center;
-  }
-  button {
-    display: flex;
-
-    border: 2px black solid;
-
-    border-radius: 10px;
-    box-shadow: 2px 1px 3px black;
-
-    padding: 10px;
-    width: 30vw;
-    color: black;
-    font-size: 1em;
-    background-color: whitesmoke;
-  }
-  #startBtn {
-    display: block;
-    position: absolute;
-    bottom: 30px;
-    left: -30px;
-    border: 2px black solid;
-    border-radius: 10%;
-    width: 100px;
-    height: 100px;
-
-    padding: 10px;
-    color: black;
-    font-size: 1em;
-    background-color: whitesmoke;
-  }
-}
-@media only screen and (max-width: 380px) {
-  .bottom {
-    position: relative;
-    top: -130px;
-    display: flex;
-    justify-content: center;
-  }
-  button {
-    display: flex;
-
-    border: 2px black solid;
-
-    border-radius: 10px;
-    box-shadow: 2px 1px 3px black;
-    margin: 10px;
-    padding: 10px;
-    width: 20vw;
-    color: black;
-    font-size: 1em;
-    background-color: whitesmoke;
-  }
-  #startBtn {
-    display: block;
-    position: absolute;
-    bottom: 60px;
-    left: -30px;
-    border: 2px black solid;
-    border-radius: 10%;
-    width: 70px;
-    height: 70px;
-
-    padding: 10px;
-    color: black;
-    font-size: 1em;
-    background-color: whitesmoke;
   }
 }
